force-app/main/default/objects/Compliance__c/fields/Test_Method_for_410b_16a__c.field-meta.xml
<CustomField>
    <fullName>Test_Method_for_410b_16a__c</fullName>
    <description>Select choice to indicate the method used by the plan to satisfy the coverage requirements under section 410(b)</description>
    <inlineHelpText>Select choice to indicate the method used by the plan to satisfy the coverage requirements under section 410(b)</inlineHelpText>
    <label>Test Method for 410b (16a)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ratio Percentage Test</fullName>
            </value>
            <value>
                <fullName>Average Benefit Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>