force-app/main/default/objects/Compliance__c/fields/Testing_Method__c.field-meta.xml
<CustomField>
    <fullName>Testing_Method__c</fullName>
    <label>Testing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PRIOR</fullName>
            </value>
            <value>
                <fullName>CURRENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>