force-app/main/default/objects/Compliance__c/fields/Testing_Year__c.field-meta.xml
<CustomField>
    <fullName>Testing_Year__c</fullName>
    <description>Year which plan document is for (i.e. 2015)</description>
    <inlineHelpText>Year which plan document is for (i.e. 2015)</inlineHelpText>
    <label>Year</label>
    <length>9</length>
    <type>Text</type>
</CustomField>