force-app/main/default/objects/Compliance__c/fields/This_return_report_is_for__c.field-meta.xml
<CustomField>
    <fullName>This_return_report_is_for__c</fullName>
    <description>This return/report is for single employer, multiple employer, one participant, or foreign plans</description>
    <inlineHelpText>This return/report is for single employer, multiple employer, one participant, or foreign plans</inlineHelpText>
    <label>This return/report is for:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single-employer</fullName>
                <default>true</default>
                <label>Single-employer</label>
            </value>
            <value>
                <fullName>One-participant</fullName>
            </value>
            <value>
                <fullName>Multiple-employer</fullName>
            </value>
            <value>
                <fullName>Foreign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>