force-app/main/default/objects/Compliance__c/fields/Top_Heavy_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Top_Heavy_Ratio__c</fullName>
    <label>Top Heavy Ratio</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>