force-app/main/default/objects/Compliance__c/fields/Top_Heavy_Resend__c.field-meta.xml
<CustomField>
    <fullName>Top_Heavy_Resend__c</fullName>
    <label>Top Heavy Resend</label>
    <type>Date</type>
</CustomField>