force-app/main/default/objects/Compliance__c/fields/Top_Heavy_Result__c.field-meta.xml
<CustomField>
    <fullName>Top_Heavy_Result__c</fullName>
    <description>Used to merge into Testing Results email</description>
    <inlineHelpText>Used to merge into Testing Results email</inlineHelpText>
    <label>Top Heavy Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top Heavy</fullName>
            </value>
            <value>
                <fullName>not Top Heavy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>