force-app/main/default/objects/Compliance__c/fields/TotActRtdSepBenefCnt__c.field-meta.xml
<CustomField>
    <fullName>TotActRtdSepBenefCnt__c</fullName>
    <description>Total number of eligible participants at beginning of year.</description>
    <inlineHelpText>Total number of eligible participants at beginning of year.</inlineHelpText>
    <label>TotActRtdSepBenefCnt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>