force-app/main/default/objects/Compliance__c/fields/Total_expenses_8h__c.field-meta.xml
<CustomField>
    <fullName>Total_expenses_8h__c</fullName>
    <description>Total expenses (add 8d, 8e, 8f, 8g)</description>
    <formula>Benefits_paid__c +  Corrective_Distributions_8e__c +  Administrative_service_providers_8f__c +  Other_expenses_8g__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total expenses (add 8d, 8e, 8f, 8g)</inlineHelpText>
    <label>Total expenses (8h)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>