force-app/main/default/objects/Compliance__c/fields/Total_income_8c__c.field-meta.xml
<CustomField>
    <fullName>Total_income_8c__c</fullName>
    <description>Total income (add lines 8a(1), 8a(2), 8a(3), and 8b)</description>
    <formula>Contributions_rcvd_from_employers_8a1__c +  Contributions_rcvd_from_ppts_8a2__c  +  Contributions_rcvd_from_others_8a3__c +  Other_income_loss_8b__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total income (add lines 8a(1), 8a(2), 8a(3), and 8b)</inlineHelpText>
    <label>Total income (8c)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>