force-app/main/default/objects/Compliance__c/fields/Total_Plan_Assets_End_of_Year_7a__c.field-meta.xml
<CustomField>
    <fullName>Total_Plan_Assets_End_of_Year_7a__c</fullName>
    <description>Total Plan Assets at the End of the Year</description>
    <inlineHelpText>Total Plan Assets at the End of the Year</inlineHelpText>
    <label>Total Plan Assets End of Year (7a)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>