force-app/main/default/objects/Compliance__c/fields/Total_Plan_Liabilities_Beg_of_Year_7b__c.field-meta.xml
<CustomField>
    <fullName>Total_Plan_Liabilities_Beg_of_Year_7b__c</fullName>
    <description>Total plan liabilities at the Beginning of Year</description>
    <inlineHelpText>Total plan liabilities at the Beginning of Year</inlineHelpText>
    <label>Total Plan Liabilities Beg. of Year (7b)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>