force-app/main/default/objects/Compliance__c/fields/Total_Plan_Liabilities_End_of_Year_7b__c.field-meta.xml
<CustomField>
    <fullName>Total_Plan_Liabilities_End_of_Year_7b__c</fullName>
    <description>Total Plan Liabilities at the end of year</description>
    <inlineHelpText>Total Plan Liabilities at the end of year</inlineHelpText>
    <label>Total Plan Liabilities End of Year (7b)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>