force-app/main/default/objects/Compliance__c/fields/TotalActPartcpBOYCnt__c.field-meta.xml
<CustomField>
    <fullName>TotalActPartcpBOYCnt__c</fullName>
    <description>Total number of active eligible participants in the beginning of the year</description>
    <label>TotalActPartcpBOYCnt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>