force-app/main/default/objects/Compliance__c/fields/TotPartcpBoyCnt__c.field-meta.xml
<CustomField>
    <fullName>TotPartcpBoyCnt__c</fullName>
    <description>Total number of eligible participants at the beginning of the year.</description>
    <inlineHelpText>Total number of eligible participants at the beginning of the year.</inlineHelpText>
    <label>TotPartcpBoyCnt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>