force-app/main/default/objects/Compliance__c/fields/Trustee2__c.field-meta.xml
<CustomField>
    <fullName>Trustee2__c</fullName>
    <inlineHelpText>Second trustee (if applicable) to send 5500 emails to</inlineHelpText>
    <label>Trustee2</label>
    <type>Email</type>
</CustomField>