force-app/main/default/objects/Compliance__c/fields/Trustee__c.field-meta.xml
<CustomField>
    <fullName>Trustee__c</fullName>
    <label>Trustee</label>
    <type>Email</type>
</CustomField>