force-app/main/default/objects/Compliance__c/fields/Trustee_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Email_1__c</fullName>
    <label>Trustee Email 1</label>
    <type>Email</type>
</CustomField>