force-app/main/default/objects/Compliance__c/fields/Trustee_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Email_2__c</fullName>
    <label>Trustee Email 2</label>
    <type>Email</type>
</CustomField>