force-app/main/default/objects/Compliance__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5500</fullName>
            </value>
            <value>
                <fullName>5500 - SF</fullName>
            </value>
            <value>
                <fullName>ADP/ACP Test</fullName>
            </value>
            <value>
                <fullName>Top Heavy Results</fullName>
            </value>
            <value>
                <fullName>5500EZ</fullName>
            </value>
            <value>
                <fullName>Fee Increase</fullName>
            </value>
            <value>
                <fullName>One Time Send</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>