force-app/main/default/objects/Compliance__c/fields/X15a_Is_the_Plan_401_k__c.field-meta.xml
<CustomField>
    <fullName>X15a_Is_the_Plan_401_k__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the plan a 401(k) plan?</description>
    <inlineHelpText>Is the plan a 401(k) plan?</inlineHelpText>
    <label>Is the Plan 401(k) (15a)</label>
    <type>Checkbox</type>
</CustomField>