force-app/main/default/objects/Compliance__c/fields/X15b__c.field-meta.xml
<CustomField>
    <fullName>X15b__c</fullName>
    <description>If “Yes,” how does the 401(k) plan satisfy the nondiscrimination requirements for employee deferrals and employer
matching contributions (as applicable) under sections 401(k)(3) and 401(m)(2)?.</description>
    <inlineHelpText>If “Yes,” how does the 401(k) plan satisfy the nondiscrimination requirements for employee deferrals and employer
matching contributions (as applicable) under sections 401(k)(3) and 401(m)(2)?.</inlineHelpText>
    <label>Nondescrimination Requirements (15b)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Design-Based SH Method</fullName>
            </value>
            <value>
                <fullName>ADP/ACP Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>