force-app/main/default/objects/Compliance__c/fields/X1st_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>X1st_Reminder_Sent__c</fullName>
    <description>Date first reminder email was sent</description>
    <inlineHelpText>Date first reminder email was sent</inlineHelpText>
    <label>1st Reminder Sent</label>
    <type>Date</type>
</CustomField>