force-app/main/default/objects/Compliance__c/fields/X29_CFR_2520_104_46_Waiver__c.field-meta.xml
<CustomField>
    <fullName>X29_CFR_2520_104_46_Waiver__c</fullName>
    <description>Claiming a waiver of the annual examination and report of an independent qualified public accountant (IQPA) under 29 CFR 2520.104-46</description>
    <inlineHelpText>Claiming a waiver of the annual examination and report of an independent qualified public accountant (IQPA) under 29 CFR 2520.104-46</inlineHelpText>
    <label>29 CFR 2520.104-46 Waiver (6b)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>