force-app/main/default/objects/Compliance__c/fields/X2nd_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Reminder_Sent__c</fullName>
    <label>2nd Reminder Sent</label>
    <type>Date</type>
</CustomField>