force-app/main/default/objects/Compliance__c/fields/X3rd_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Reminder_Sent__c</fullName>
    <description>Date third reminder is sent</description>
    <inlineHelpText>Date third reminder is sent</inlineHelpText>
    <label>3rd Reminder Sent</label>
    <type>Date</type>
</CustomField>