force-app/main/default/objects/Compliance__c/fields/X4th_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>X4th_Reminder_Sent__c</fullName>
    <label>4th Reminder Sent</label>
    <type>Date</type>
</CustomField>