force-app/main/default/objects/Compliance__c/fields/X5500_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>X5500_Plan_Name__c</fullName>
    <description>5500 Plan Name (example: Decimal, Inc Retirement Trust)</description>
    <inlineHelpText>5500 Plan Name (example: Decimal, Inc Retirement Trust)</inlineHelpText>
    <label>5500 Plan Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>