force-app/main/default/objects/Compliance__c/fields/X5500_Reporting_Method__c.field-meta.xml
<CustomField>
    <fullName>X5500_Reporting_Method__c</fullName>
    <label>5500 Reporting Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accural</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>