force-app/main/default/objects/Compliance__c/fields/X5500_Situation__c.field-meta.xml
<CustomField>
    <fullName>X5500_Situation__c</fullName>
    <description>Verifies if Compliance object has Prior Year 5500, Final 5500 or Both</description>
    <inlineHelpText>Verifies if Compliance object has Prior Year 5500, Final 5500 or Both</inlineHelpText>
    <label>5500 Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prior Year Only</fullName>
            </value>
            <value>
                <fullName>Final 5500 Only</fullName>
            </value>
            <value>
                <fullName>Prior + Final 5500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>