force-app/main/default/objects/Compliance__c/fields/X5th_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>X5th_Reminder_Sent__c</fullName>
    <label>5th Reminder Sent</label>
    <type>Date</type>
</CustomField>