force-app/main/default/objects/Compliance__c/fields/X6th_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>X6th_Reminder_Sent__c</fullName>
    <label>6th Reminder Sent</label>
    <type>Date</type>
</CustomField>