force-app/main/default/objects/Compliance__c/fields/xPlan_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>xPlan_Effective_Date__c</fullName>
    <label>Plan Effective Date</label>
    <type>Date</type>
</CustomField>