force-app/main/default/objects/Compliance__c/recordTypes/ADP_ACP_Testing.recordType-meta.xml
<RecordType>
    <fullName>ADP_ACP_Testing</fullName>
    <active>true</active>
    <description>Used for ADP/ACP Testing</description>
    <label>ADP/ACP Testing</label>
</RecordType>