force-app/main/default/objects/Compliance__c/recordTypes/Auto_Email.recordType-meta.xml
<RecordType>
    <fullName>Auto_Email</fullName>
    <active>true</active>
    <description>For scheduling and batching auto emails that are going to be uncommon/one time</description>
    <label>Auto Email</label>
</RecordType>