force-app/main/default/objects/Compliance__c/recordTypes/Form_5500_New.recordType-meta.xml
<RecordType>
    <fullName>Form_5500_New</fullName>
    <active>true</active>
    <label>Form 5500 - New</label>
</RecordType>