force-app/main/default/objects/Compliance__c/recordTypes/Top_Heavy.recordType-meta.xml
<RecordType>
    <fullName>Top_Heavy</fullName>
    <active>true</active>
    <description>Record Type for Top Heavy Testing results</description>
    <label>Top Heavy</label>
</RecordType>