force-app/main/default/objects/Compliance__c/recordTypes/X5500.recordType-meta.xml
<RecordType>
    <fullName>X5500</fullName>
    <active>true</active>
    <description>Used for 5500&apos;s</description>
    <label>5500</label>
</RecordType>