force-app/main/default/objects/Compliance__c/recordTypes/X5500EZ.recordType-meta.xml
<RecordType>
    <fullName>X5500EZ</fullName>
    <active>true</active>
    <description>For SingleK 5500EZ</description>
    <label>5500EZ</label>
</RecordType>