force-app/main/default/objects/Compliance__c/validationRules/x5500_Basic_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>x5500_Basic_Fields</fullName>
    <active>true</active>
    <description>Required fields when creating any 5500</description>
    <errorConditionFormula>RecordTypeId = &apos;01237000000N0lp&apos;
&amp;&amp;
(
ISBLANK( Testing_Year__c )
||
ISPICKVAL( Type__c , &quot;&quot;)
||
ISBLANK(  Primary_Plan_Sponsor_Email__c  )
)</errorConditionFormula>
    <errorMessage>Complete Year, Form Type and Primary Plan Sponsor Email</errorMessage>
</ValidationRule>