force-app/main/default/objects/Compliance__c/validationRules/x5500_Data_Not_Matching.validationRule-meta.xml
<ValidationRule>
    <fullName>x5500_Data_Not_Matching</fullName>
    <active>true</active>
    <description>Identifies situations where &quot;5500 Situation&quot; doesn&apos;t match data entered in Prior Year &amp; Final 5500 Sections 1 of 2</description>
    <errorConditionFormula>RecordTypeId = &apos;01237000000N0lp&apos;
&amp;&amp;
ISPICKVAL(X5500_Situation__c, &apos;Prior Year Only&apos;)
&amp;&amp;
(
NOT(ISBLANK( Plan_Year_End_Final__c ))
||
NOT(ISBLANK( Form_Year_Final__c ))
||
NOT(ISBLANK( ASC_URL_Link_Final__c ))
||
NOT(ISBLANK( Due_Date_Final__c ))
)</errorConditionFormula>
    <errorMessage>Situation = Prior Year Only but data is entered in the &quot;Final 5500 Section&quot; - Either &quot;Situation&quot; or data in Final 5500 section needs to be corrected.</errorMessage>
</ValidationRule>