force-app/main/default/objects/Compliance__c/validationRules/x5500_Data_Not_Matching2.validationRule-meta.xml
<ValidationRule>
    <fullName>x5500_Data_Not_Matching2</fullName>
    <active>true</active>
    <description>Identifies situations where &quot;5500 Situation&quot; doesn&apos;t match data entered in Prior Year &amp; Final 5500 Sections 2 of 2</description>
    <errorConditionFormula>RecordTypeId = &apos;01237000000N0lp&apos;
&amp;&amp;
ISPICKVAL(X5500_Situation__c, &apos;Final 5500 Only&apos;)
&amp;&amp;
(
NOT(ISBLANK( Plan_Year_End__c ))
||
NOT(ISBLANK( Form_Year__c ))
||
NOT(ISBLANK( ASC_URL_Link__c ))
||
NOT(ISBLANK( Due_Date__c ))
)</errorConditionFormula>
    <errorMessage>Situation = Final 5500 Only but data is entered in the &quot;Prior Year 5500&quot; section - Either &quot;Situation&quot; or data in Prior 5500 section needs to be corrected.</errorMessage>
</ValidationRule>