force-app/main/default/objects/Compliance__c/validationRules/x5500_Prior_Final_Reqd_Fields_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>x5500_Prior_Final_Reqd_Fields_Creation</fullName>
    <active>true</active>
    <description>Required fields when creating Prior+Final 5500</description>
    <errorConditionFormula>RecordTypeId = &apos;01237000000N0lp&apos;
&amp;&amp;
 ISPICKVAL(X5500_Situation__c, &apos;Prior + Final 5500&apos;)
&amp;&amp;
(
ISBLANK( Plan_Year_End__c )
||
ISBLANK( Plan_Year_End_Final__c )
||
ISBLANK( Form_Year__c )
||
ISBLANK( Form_Year_Final__c )
||
ISBLANK( Due_Date__c )
||
ISBLANK( Due_Date_Final__c )
||
ISBLANK( Testing_Year__c )
||
ISPICKVAL( Type__c , &quot;&quot;)
||
ISBLANK(  Primary_Plan_Sponsor_Email__c  )
)</errorConditionFormula>
    <errorMessage>Complete Plan Year End, Form Year, and Due Date for Prior + Final 5500 sections.</errorMessage>
</ValidationRule>