force-app/main/default/objects/Compliance__c/validationRules/x5500_Prior_Reqd_Fields_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>x5500_Prior_Reqd_Fields_Creation</fullName>
    <active>true</active>
    <description>Required fields when creating Prior 5500</description>
    <errorConditionFormula>RecordTypeId = &apos;01237000000N0lp&apos;
&amp;&amp;
 ISPICKVAL(X5500_Situation__c, &apos;Prior Year Only&apos;)
&amp;&amp;
(
ISBLANK( Plan_Year_End__c )
||
ISBLANK( Form_Year__c )
||
ISBLANK( Due_Date__c )
)</errorConditionFormula>
    <errorMessage>Complete Plan Year End, Form Year, and Due Date in PRIOR YEAR 5500 section.</errorMessage>
</ValidationRule>