force-app/main/default/objects/Compliance__c/listViews/X2020_5500s.listView-meta.xml
<ListView>
    <fullName>X2020_5500s</fullName>
    <columns>NAME</columns>
    <columns>X1st_Reminder_Sent__c</columns>
    <columns>DOL_Status__c</columns>
    <columns>DOL_Status_Final__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Compliance__c.X5500</value>
    </filters>
    <filters>
        <field>Testing_Year__c</field>
        <operation>equals</operation>
        <value>2020</value>
    </filters>
    <label>2020 5500s</label>
</ListView>